# maxgraphvsc

./: .gitignore  CHANGELOG.md  EXTENSION_DEVELOPMENT_SUMMARY.md  HYBRID_APPROACH_GUIDE.md  README.md  academic-neural-demo.html  build-all.sh  check-extension.sh  clean_extension.ts  console-analysis.txt  console-dump.txt  create-canvas-test.sh  create-github-pages.sh  debug-console-state.sh  esbuild.js  hybrid-vs-pure-comparison.html  launch-extension.sh  maxgraph-hybrid-demo.html  maxgraph-style-demo.html  maxgraphvsc.code-workspace  multi-perspective-demo.html  package-lock.json  package.json  package.json.backup  pure-maxgraph-concept.html  real-maxgraph-hybrid-demo.html  reload-extension.sh  simple-hybrid-demo.html  temp.ts  test-canvas.html  test-extension.sh  test-webview-standalone.sh  test-webview.html  tsconfig.json
.github/workflows/: pages.yml
.history/: package_20250616065632.json  package_20250616065851.json  package_20250616070157.json  package_20250616070203.json  package_20250616070534.json  package_20250616174204.json  tsconfig_20250616065704.json  tsconfig_20250616070149.json
.history/scripts/: code-clean_20250616071259.sh
.history/src/: extension-fixed_20250616072611.ts  extension_20250616070513.ts  (+28 more)
archive/: clean_extension.ts
docs/: README.md  deploy.sh  enhanced-academic-demo.html  index.html  index.html.backup  pure-maxgraph-demo.html
neural-wasm/: Cargo.toml
neural-wasm/src/: lib.rs
src/: extension-clean.ts  extension-new.ts  extension.ts  extension.ts.backup  hybrid-neural-demo.ts  hybrid-neural-graph.ts  neural-panel-integration.ts
(+3 files in other folders)
